--- a/index.html
+++ b/index.html
@@ -1,98 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="My personal website"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Nektarios Gkouvousis"/>
+  <header>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="My personal website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Nektarios Gkouvousis" />
     <title>Nektarios Gkouvousis</title>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     <script src="navigation.js" defer></script>
     <script src="style.js"></script>
     <script src="script.js"></script>
 
-    <link rel="stylesheet" href="loading.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="social.css">
-        
+    <link rel="stylesheet" href="loading.css" />
+    <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="social.css" />
+
     <div class="navbar">
-        <div class="logo" onclick="window.location.href='index.html'">
-            <img src="images/logo2.png">
-        </div>
-        <ul class="links" >
-            <li><a href="#about" onclick="scrollToSection('about')">Home</a></li>
-            <li><a href="#projects" onclick="scrollToSection('projects')">Projects</a></li>
-            <li><a href="#contact" onclick="scrollToSection('contact')">Contact</a></li>
-        </ul>
+      <div class="logo" onclick="window.location.href='index.html'">
+        <img src="images/logo2.png" />
+      </div>
+      <ul class="links">
+        <li><a href="#about" onclick="scrollToSection('about')">Home</a></li>
+        <li>
+          <a href="#projects" onclick="scrollToSection('projects')">Projects</a>
+        </li>
+        <li>
+          <a href="#contact" onclick="scrollToSection('contact')">Contact</a>
+        </li>
+      </ul>
     </div>
-</header>
-    <body>
-        <div class="welcome_box">
-            <h2>I am Nektarios and I am a Full Stack Software Engineer.</h2>
-        </div>
-        <br><br><br>
-        <div class="get_started" id="get_started">
-            <p>Get Started</p>
-            <img src="images/transparent_enter.png">
-        </div>
-
-        <section id="about">
-            <div class="section_title">
-                <h1>About Me</h1>
-            </div>
-            <div class="parbox">
-                <p>
-                    I am located in Athens Greece and I am currently studying Informatics and Computer Engineering at
-                    the University of West Attica in Athens. Alongside with my studies, I currently work for <a href="https://www.datablue.gr/">DataBlue S.A</a>
-                    as a Junior Fullstack .NET Developer. In my role as a developer, I'm deeply involved in the maintenance of an API and the development of features for a desktop application used by doctors to help enhance job experience. I'm excited to be a part of a team that is making a significant impact on the healthcare industry by leveraging technology to improve healthcare management
-                    from a doctor's perspective. <br><br>In my free time, I enjoy working on personal projects and learning new technologies. I am passionate about software development and I am always looking for new opportunities to grow and expand my knowledge.
-                    But, whenever I don't feel like coding, I enjoy playing video games, watching movies and TV series, and spending time with my friends and family.
-
-                </p>
-            </div>
-        </section>
-        <section id="projects">
-            <div class="section_title">
-                <h1>Projects</h1>
-            </div>
-            <div class="parbox">
-                <p>
-                    Throughout my journey as a developer, I have worked on a variety of projects that have helped me gain the experience and knowledge needed to become a successful developer. Some of the projects I have worked on include:
-                </p>
-                <br>
-                <p>
-                    You can find more about my projects at my personal Github page.
-                </p>
-            </div>
-            <div class="container">
-                <h1>yapa<br><br><br>
-                    yapa</h1>
-            </div>
-        </section>
-        <div class="container">
-            <h2>THIS IS<BR> A TEST <BR> CONTAINER<BR> FOR NO <BR> REASON</h2>
-        </div>
-        <section id="contact">
-            <div class="container">
-                <h1>asds<br><br><br>
-                    sadsaa</h1>
-            </div>
-        </section>
-    </body>
-    <div class="social">
-        <a href="https://github.com/Gouvo7">
-            <img src="images/git_ico.png">
-        </a>
-        <a href="https://www.instagram.com/nektarios.gouvousis/">
-            <img src="images/insta_ico.png">
-        </a>
-        <a href="https://www.linkedin.com/in/nektarios-gkouvousis-581a9a1a8/">
-            <img src="images/linkedin_ico.png">
-        </a>
+  </header>
+  <body>
+    <div class="welcome_box">
+      <h2>I am Nektarios and I am a Full Stack Software Engineer.</h2>
+    </div>
+    <br /><br /><br />
+    <div class="get_started" id="get_started">
+      <p>Get Started</p>
+      <img src="images/transparent_enter.png" />
     </div>
 
+    <section id="about">
+      <div class="section_title">
+        <h1>About Me</h1>
+      </div>
+      <div class="parbox">
+        <p>
+          I am located in Athens Greece and I am currently studying Informatics
+          and Computer Engineering at the University of West Attica in Athens.
+          Alongside with my studies, I currently work for
+          <a href="https://www.datablue.gr/">DataBlue S.A</a> as a Junior
+          Fullstack .NET Developer. In my role as a developer, I'm deeply
+          involved in the maintenance of an API and the development of features
+          for a desktop application used by doctors to help enhance job
+          experience. I'm excited to be a part of a team that is making a
+          significant impact on the healthcare industry by leveraging technology
+          to improve healthcare management from a doctor's perspective.
+          <br /><br />In my free time, I enjoy working on personal projects and
+          learning new technologies. I am passionate about software development
+          and I am always looking for new opportunities to grow and expand my
+          knowledge. But, whenever I don't feel like coding, I enjoy playing
+          video games, watching movies and TV series, and spending time with my
+          friends and family.
+        </p>
+        <br /><br />
+      </div>
+    </section>
+    <section id="skills">
+      <div class="section_title">
+        <h1>Skills</h1>
+      </div>
+      <div class="parbox">
+        <p>
+          Through my adventure of learning and building projects, I have studied
+          a wide variety of technologies and software stacks.
+        </p>
+      </div>
+      <br /><br />
+      <div class="parbox">
+        <div class="skills">
+          <div class="skills-bar">
+            <div class="bar">
+              <div class="info">
+              <span>Java</span>
+              </div>
+              <div class="progress-line">
+              <span class="java"></span>
+            </div>
+            <div class="bar">
+              <div class="info">
+              <span>C#</span>
+              </div>
+              <div class="progress-line">
+              <span class="csharp"></span>
+            </div>
+            <div class="bar">
+              <div class="info">
+              <span>Python</span>
+              </div>
+              <div class="progress-line">
+              <span class="python"></span>
+            </div>
+            <div class="bar">
+              <div class="info">
+                <span>HTML</span>
+              </div>
+              <div class="progress-line">
+                <span class="html"></span>
+              </div>
+            <div class="bar">
+              <div class="info">
+                <span>CSS</span>
+              </div>
+              <div class="progress-line">
+                <span class="css"></span>
+              </div>
+            <div class="bar">
+              <div class="info">
+              <span>Javascript</span>
+              </div>
+              <div class="progress-line">
+              <span class="javascript"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="section_title">
+        <h1>Projects</h1>
+      </div>
+      <div class="parbox">
+        <p>
+          Throughout my journey as a developer, I have worked on a variety of
+          projects that have helped me gain the experience and knowledge needed
+          to become a successful developer. Some of the projects I have worked
+          on include:
+        </p>
+        <div>
+          <br><br>
+          <h2>Vodafone Appointment Manager</h2>
+          <br><br>
+          <img src="images/team_ready.png" alt="Image of the welcome screen of the vodafone appointment manager application."/>
+          <div class="parbox">
+            <p>
+              Built using Java, this application was used in my time working for Vodafone Group as a salesman and tech specialist.
+              The company was tracking down appointments on a daily basis and a monthly report was mandatory. The capabilities
+              of this application are that users can arrange appointments with customers, edit appointment information and
+              produce daily and monthly reports through the app. 
+            </p>
+          </div>
+        </div>
+        <div>
+          <br><br>
+          <h2>Shooting Range Management</h2>
+          <br><br>
+          <img src="images/shooting_range.png" width="1000" height="auto" alt="Image of the starting screen of the shooting range application."/>
+          <div class="parbox">
+            <p>
+              A while ago, there was a shooting range organization in Athens that contacted me and a friend of mine
+              and they told us about the various problems that the have came across. Basically, none of the
+              procedures (registration, various paperwork, warehouse count, training/match statistics etc.) were digitized,
+              and the members of the organization had to fill in papers and send them to the local authorities.
+              This application idea would resolve all of those problems by making all of the above procedures automated. The project
+              was soon dropped as the organization could not support it further, but it was very helpful on extending my portfolio (C#).
+            </p>
+          </div>
+        </div>
+        <div>
+          <br><br>
+          <h2>Exam Schedule Composition System (Thesis)</h2>
+          <br><br>
+          <img src="images/thesis.png" width="1000" height="auto" alt="Image of my thesis, an exam schedule composition system."/>
+          <div class="parbox">
+            <p>
+              Built using Java and other libraries, this application was built as my thesis project.
+              The scope is that this app would be used firstly for the purposes of each final exam schedule
+              by my university, and later on, it would be adapted across various universities all over Greece.
+              In a summary, the app uses .xlsx files as input and output at the same time, reading the excel files
+              upon starting the application and saving the changes in a file. For portability and maintenance reasons,
+              the catch is that we did not want to use any databases and for this reason, this is the reason that we chose
+              to use .xlsx files for reading and storing data.
+            </p>
+          </div>
+        </div>
+        <br>
+        <p>You can find more about my projects at my personal Github page.</p>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="section_title">
+        <h1>Contact</h1>
+      </div>
+      <div class="parbox">
+        <p>If you want to reach out to me, you can find me on my social media using
+          the links on the left of the screen. If you want to contact me via e-mail,
+          feel free to reach out to gouvousisnektarios@gmail.com
+        </p>
+      </div>
+
+    </section>
+  </body>
+  <div class="social">
+    <a href="https://github.com/Gouvo7">
+      <img src="images/git_ico.png" />
+    </a>
+    <a href="https://www.instagram.com/nektarios.gouvousis/">
+      <img src="images/insta_ico.png" />
+    </a>
+    <a href="https://www.linkedin.com/in/nektarios-gkouvousis-581a9a1a8/">
+      <img src="images/linkedin_ico.png" />
+    </a>
+  </div>
 </html>
