functional website, need to add code for contact

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <br><br>
           <h2>Vodafone Appointment Manager</h2>
           <br><br>
-          <img src="images/team_ready.png" alt="Image of the welcome screen of the vodafone appointment manager application."/>
+          <img class="projectImage" src="images/team_ready.png" alt="Image of the welcome screen of the vodafone appointment manager application."/>
           <div class="parbox">
             <p>
               Built using Java, this application was used in my time working for Vodafone Group as a salesman and tech specialist.
@@ -171,7 +171,7 @@
           <br><br>
           <h2>Shooting Range Management</h2>
           <br><br>
-          <img src="images/shooting_range.png" width="1000" height="auto" alt="Image of the starting screen of the shooting range application."/>
+          <img class="projectImage" src="images/shooting_range.png" width="1000" height="auto" alt="Image of the starting screen of the shooting range application."/>
           <div class="parbox">
             <p>
               A while ago, there was a shooting range organization in Athens that contacted me and a friend of mine
@@ -187,11 +187,11 @@
           <br><br>
           <h2>Exam Schedule Composition System (Thesis)</h2>
           <br><br>
-          <img src="images/thesis.png" width="1000" height="auto" alt="Image of my thesis, an exam schedule composition system."/>
+          <img class="projectImage" src="images/thesis.png" width="auto" height="auto" alt="Image of my thesis, an exam schedule composition system."/>
           <div class="parbox">
             <p>
               Built using Java and other libraries, this application was built as my thesis project.
-              The scope is that this app would be used firstly for the purposes of each final exam schedule
+              The scope is that this app would be used for the purposes of each final exam schedule
               by my university, and later on, it would be adapted across various universities all over Greece.
               In a summary, the app uses .xlsx files as input and output at the same time, reading the excel files
               upon starting the application and saving the changes in a file. For portability and maintenance reasons,
@@ -200,7 +200,6 @@
             </p>
           </div>
         </div>
-        <br>
         <p>You can find more about my projects at my personal Github page.</p>
       </div>
     </section>
@@ -209,22 +208,22 @@
         <h1>Contact</h1>
       </div>
       <div class="parbox">
-        <p>If you want to reach out to me, you can find me on my social media using
-          the links on the left of the screen. If you want to contact me via e-mail,
-          feel free to reach out to gouvousisnektarios@gmail.com
-        </p>
+        <p>If you want to reach out to me, you can find me on my social media</p>
+        <div class="contact-info">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12584.627263317938!2d23.690429582334747!3d37.950124271493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bc5b6d11b785%3A0x88b81f80f9d30d43!2sKallithea!5e0!3m2!1sen!2sgr!4v1734871704627!5m2!1sen!2sgr"
+          width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
-
     </section>
   </body>
   <div class="social">
-    <a href="https://github.com/Gouvo7">
+    <a href="https://github.com/Gouvo7" target="_blank">
       <img src="images/git_ico.png" />
     </a>
-    <a href="https://www.instagram.com/nektarios.gouvousis/">
+    <a href="https://www.instagram.com/nektarios.gouvousis/" target="_blank">
       <img src="images/insta_ico.png" />
     </a>
-    <a href="https://www.linkedin.com/in/nektarios-gkouvousis-581a9a1a8/">
+    <a href="https://www.linkedin.com/in/nektarios-gkouvousis-581a9a1a8/" target="_blank">
       <img src="images/linkedin_ico.png" />
     </a>
   </div>
