Final version of the website, improvements could be made

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="images/logo2.png" />
       </div>
       <ul class="links">
-        <li><a href="#about" onclick="scrollToSection('about')">Home</a></li>
+        <li><a href="#about" onclick="scrollToSection('about')">About</a></li>
         <li>
           <a href="#projects" onclick="scrollToSection('projects')">Projects</a>
         </li>
@@ -47,16 +47,16 @@
     </div>
   </header>
   <body>
-    <div class="hello_box hidden_left">
+    <div class="hello_box hidden_right">
       <h2>Hello there!</h2>
     </div>
-    <div class="welcome_box hidden_right" style="transition-delay: 1s;">
+    <div class="welcome_box hidden_left" style="transition-delay: 1s;">
       <h2>I am Nektarios and I am a Full Stack Software Engineer.</h2>
     </div>
     <br/><br/>
-    <div class="message_box hidden_left" style="transition-delay: 3s;"><h3>I love building things and designing User Interfaces.</h3></div>
+    <div class="message_box hidden_right" style="transition-delay: 2s;"><h3>I love building things and designing User Interfaces.</h3></div>
     <br/>
-    <div class="get_started hidden_right" style="transition-delay: 4s;" id="get_started">
+    <div class="get_started hidden_left" style="transition-delay: 3s;" id="get_started">
       <p>Get Started</p>
       <img src="images/transparent_enter.png" />
     </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="parbox">
         <p>
-          I am located in Athens Greece and I am currently studying Informatics
+          I am located in Athens Greece, I am 24 years old and I am currently studying Informatics
           and Computer Engineering at the University of West Attica in Athens.
           Alongside with my studies, I currently work for
           <a href="https://www.datablue.gr/">DataBlue S.A</a> as a Junior
@@ -89,7 +89,8 @@
       <div class="parbox">
         <p>
           Through my adventure of learning and building projects, I have studied
-          a wide variety of technologies and software stacks.
+          a wide variety of technologies and software stacks. Some that I use
+          are listed below, but expanding knowledge for me never stops!
         </p>
       </div>
       <br /><br />
@@ -205,9 +206,9 @@
             <div class="carousel-caption d-none d-md-block">
               <h3>Hotel Management System</h3>
               <p>This was a final project for a course at my time in my University. This app was designed to be used by
-                hotels to manage their bookings (add rooms, manage bookings etc) and for customers who wanted to book a hotel room.
-              The application has two different user interfaces based on the user type that has logged in and used a database to store and manage all the 
-              information. Build using C#, it was a very nice project that got me into deeping further for backend developing </p>
+                hotels to manage their bookings (add rooms, manage bookings etc) and for customers who wanted to book a hotel room and inspect
+                various information about the hotel. The application has two different user interfaces based on the user type that logged in and used a database to store and manage all the 
+              information, from bookings to displaying images per room. Build using C#, it was a very nice project that got me into deeping further for backend developing </p>
             </div>
           </div>
           <div class="carousel-item">
@@ -216,7 +217,8 @@
               <h3>Hardware Shop (e-Shop)</h3>
               <p>Also built for a course's final examination for my University, this was one of the most fun projects I have built at that time.
                 Build using HTML, CSS, PHP and a database, this app is a fully functional eshop where users could search through a variety of products
-                related to computer hardware, view item details and make orders.
+                related to computer hardware, view item details and make orders. The app was designed to be user-friendly, easy to use and scalable.
+                Through the database, new item listings could be added, edited or deleted. Overall, this project helped me understand the importance of database management and user experience design.
               </p>
             </div>
           </div>
@@ -231,7 +233,7 @@
         </button>
       </div>
       <br>
-      <div class="parbox"><p>You can find more about these projects at my Github page.</p></div>
+      <div class="parbox"><p>You can find more details about these and other personal projects at my Github page.</p></div>
       
     </section>
     <section id="contact">
