Added resume to webpage

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
           <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="2" aria-label="Project 3"></button>
           <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="3" aria-label="Project 4"></button>
           <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="4" aria-label="Project 5"></button>
+          <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="5" aria-label="Project 6"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -222,6 +223,17 @@
               </p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="images/cpp_final.png" class="d-block mx-auto" alt="Labyrinth Game">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Labyrinth Game VS Computer</h3>
+              <p>Built using C++, this was also a final project for a course at my time in University. The game is a simple labyrinth game where the player has to find a gem that would randomly spawn
+                in the map and could change location at a random pace after an amout of moves made. The catch is that the user is playing against the computer, which is also trying to find the gem. The computer is using a simple algorithm to find the gem, and the user
+                has to be faster than the computer to win. The game was built using the console and the user could navigate through the labyrinth using the arrow keys. The map was a .txt file that would be given as an argument upon starting the app.
+                 A very fun project that helped me understand a ton of things about object oriented programming.</p>
+              </p>
+            </div>
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -243,14 +255,11 @@
       <div class="parbox">
         <p>If you want to reach out to me, feel free to send me an e-mail or contact me 
           via social media. I'm always open about new opportunities and adventures!</p>
-        <h3>E-mail: gouvousisnektarios@gmail.com</h5>
+        <h3>E-mail: gouvousisnektarios@gmail.com</h3>
+        <p>If you want to download my resume, click the link below</p>
+        <a href="src/CV_Nektarios GkouvousisEN.pdf" download><h3>Download my resume</h3></a>
       </div>
 
-      <div class="contact-box">
-        <ul>
-          <li></li>
-        </ul>
-      </div>
     </section>
   </body>
   <div class="social">
