Added logo to website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <header>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="My personal website" />
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="social.css" />
+    <link rel="icon" type="image/x-icon" href="images/logo2.ico" />
 
     <div class="navbar">
       <div class="logo" onclick="window.location.href='index.html'">
@@ -45,7 +46,7 @@
         </li>
       </ul>
     </div>
-  </header>
+  </head>
   <body>
     <div class="hello_box hidden_right">
       <h2>Hello there!</h2>
