--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="My personal website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Nektarios Gkouvousis" />
@@ -31,7 +30,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="social.css" />
     <link rel="icon" type="image/x-icon" href="images/logo2.ico" />
-
+  </head>
+  <body>
     <div class="navbar">
       <div class="logo" onclick="window.location.href='index.html'">
         <img src="images/logo2.png" />
@@ -46,8 +46,6 @@
         </li>
       </ul>
     </div>
-  </head>
-  <body>
     <div class="hello_box hidden_right">
       <h2>Hello there!</h2>
     </div>
@@ -68,30 +66,24 @@
       </div>
       <div class="parbox">
         <p>
-          I am located in Athens Greece, I am 24 years old and I am currently studying Informatics
-          and Computer Engineering at the University of West Attica in Athens.
-          Alongside with my studies, I currently work for
-          <a href="https://www.datablue.gr/">DataBlue S.A</a> as a Junior
-          Fullstack .NET Developer. In my role as a developer, I'm deeply
-          involved in the maintenance of an API and the development of features
-          for a desktop application used by doctors to help enhance job
-          experience. I'm excited to be a part of a team that is making a
-          significant impact on the healthcare industry by leveraging technology
-          to improve healthcare management from a doctor's perspective.
-          <br /><br />In my free time, I enjoy working on personal projects and
-          learning new technologies. I am passionate about software development
-          and I am always looking for new opportunities to grow and expand my
-          knowledge. But, whenever I don't feel like coding, I enjoy playing
-          video games, watching movies and TV series, and spending time with my
-          friends and family.
+          I’m based in Athens, Greece, and I’m 24 years old. Currently, I’m pursuing a degree in 
+          Informatics and Computer Engineering at the University of West Attica. Alongside my studies,
+          I work at <a href="https://www.datablue.gr/">DataBlue S.A.</a> as a Junior Fullstack .NET Developer.
+          In this role, I’m actively involved in maintaining an API and developing features for a desktop application
+          designed to support doctors and enhance their day-to-day workflow. I’m proud to be part of a team that is
+          making a meaningful impact on the healthcare industry by using technology to improve medical professionals'
+          experiences.
+          <br /><br /> In my free time, I enjoy building personal projects and exploring new technologies. I’m passionate 
+          about software development and always eager to grow my skill set and take on new challenges. When I’m not coding, 
+          I like to relax by playing video games, watching movies and TV series, or spending quality time with friends and family.
         </p>
         <br/>
       </div>
       <div class="parbox">
         <p>
-          Through my adventure of learning and building projects, I have studied
-          a wide variety of technologies and software stacks. Some that I use
-          are listed below, but expanding knowledge for me never stops!
+          Throughout my journey of learning and building projects, I’ve explored a wide range of technologies and software stacks. 
+          Below are some of the tools and frameworks I actively use—but for me, learning is a continuous process, and I’m always 
+          striving to expand my skill set.
         </p>
       </div>
       <br /><br />
@@ -101,17 +93,17 @@
           <div class="skills-bar">
             <div class="bar">
               <div class="info">
-              <span>Java</span>
-              </div>
-              <div class="progress-line">
-              <span class="java"></span>
-            </div>
-            <div class="bar">
-              <div class="info">
               <span>C#</span>
               </div>
               <div class="progress-line">
               <span class="csharp"></span>
+            </div>
+            <div class="bar">
+              <div class="info">
+              <span>Java</span>
+              </div>
+              <div class="progress-line">
+              <span class="java"></span>
             </div>
             <div class="bar">
               <div class="info">
@@ -151,10 +143,9 @@
       </div>
       <div class="parbox">
         <p>
-          Throughout my journey as a developer, I have worked on a variety of
-          projects that have helped me gain the experience and knowledge needed
-          to become a successful developer. Some of the projects I have worked
-          on include:
+          Over the course of my development journey, I’ve worked on a variety of projects that have 
+          helped me gain valuable experience and deepen my knowledge as a software developer. These projects
+           have played a key role in shaping my skills and professional growth. Some of the highlights include:
         </p>
       </div>
       <div id="projectCarousel" class="carousel slide" >
@@ -171,56 +162,59 @@
             <img src="images/shooting_range.png" class="d-block mx-auto" alt="Shooting Range">
             <div class="carousel-caption d-none d-md-block">
               <h3>Shooting Range Data Management System</h3>
-              <p>A while ago, there was a shooting range organization in Athens that contacted me and a friend of mine
-                and they told us about the various problems that the have came across. Basically, none of the
-                procedures (registration, various paperwork, warehouse count, training/match statistics etc.) were digitized,
-                and the members of the organization had to fill in papers and send them to the local authorities.
-                This application idea would resolve all of those problems by making all of the above procedures automated. The project
-                was soon dropped as the organization could not support it further, but it was very helpful on extending my portfolio (C#).</p>
+              <p>A while ago, a shooting range organization in Athens reached out to me and a colleague, sharing the 
+                challenges they were facing. They explained that many of their processes—such as registration, paperwork, 
+                inventory management, and training/match statistics—were still done manually. Members of the organization had to 
+                complete paper forms and submit them to local authorities, leading to inefficiencies and a lack of automation.
+                To address these issues, we came up with the idea for a desktop application that would automate these procedures 
+                and streamline the entire workflow. Unfortunately, the project was eventually dropped as the organization was unable
+                 to continue supporting it. However, this experience was invaluable in expanding my portfolio, particularly in C# development.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/team_ready.png" class="d-block mx-auto" alt="Vodafone Appointment Manager">
             <div class="carousel-caption d-none d-md-block">
               <h3>Vodafone Appointment Manager</h3>
-              <p>Built using Java, this application was used in my time working for Vodafone Group as a salesman and tech specialist.
-                The company was tracking down appointments on a daily basis and a monthly report was mandatory. The capabilities
-                of this application are that users can arrange appointments with customers or edit appointment information. All of
-                the data were stored inside folders (with certain names for each year and month) in .txt files. At the end of each day or each month, reports in .xlsx files could be
-                produced to track down the required data, a prodecure which would save a lot of time for employees. </p>
+              <p>This Java-based application was developed during my time at Vodafone Group, where I worked as a salesman and tech specialist.
+                 The company required daily tracking of appointments and the generation of mandatory monthly reports. The application allowed 
+                 users to schedule appointments with customers, as well as edit existing appointment details. Data was organized in folders—named
+                  according to year and month—and stored in .txt files. At the end of each day or month, the system could generate .xlsx reports,
+                   significantly reducing the time employees spent on manual documentation and improving overall efficiency.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/thesis.png" class="d-block mx-auto" alt="Exam Schedule Composition">
             <div class="carousel-caption d-none d-md-block">
               <h3>Exam Schedule Composition System (Thesis)</h3>
-              <p>Built using Java and other libraries, this application was built as my thesis project.
-                The scope is that this app would be used for the purposes of each final exam schedule
-                by my university, and later on, it would be adapted across various universities all over Greece.
-                In a summary, the app uses .xlsx files as input and output at the same time, reading the excel files
-                upon starting the application and saving the changes in a file. For portability and maintenance reasons,
-                the catch is that we did not want to use any databases and for this reason, this is the reason that we chose
-                to use .xlsx files for reading and storing data.</p>
+              <p>This application was developed in Java, alongside supporting libraries, as part of my undergraduate thesis. 
+                Its primary objective is to generate the final examination schedule for a university semester, with the long-term goal 
+                of adapting it for broader use across academic institutions throughout Greece. The system relies exclusively on `.xlsx` 
+                files for both input and output, reading structured data at startup and writing any changes back to Excel files. This design
+                 choice—avoiding the use of traditional databases—ensures maximum portability and simplicity in maintenance, while still 
+                 enabling robust data processing through well-defined spreadsheet formatting.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/hotel_management.png" class="d-block mx-auto" alt="Hotel Management Login page">
             <div class="carousel-caption d-none d-md-block">
               <h3>Hotel Management System</h3>
-              <p>This was a final project for a course at my time in my University. This app was designed to be used by
-                hotels to manage their bookings (add rooms, manage bookings etc) and for customers who wanted to book a hotel room and inspect
-                various information about the hotel. The application has two different user interfaces based on the user type that logged in and used a database to store and manage all the 
-              information, from bookings to displaying images per room. Build using C#, it was a very nice project that got me into deeping further for backend developing </p>
+              <p>This was a final project developed during my time at university. The application was designed for hotel booking management, 
+                catering to both hotel administrators and customers. Hotel staff could add rooms, manage bookings, and handle various operational 
+                details, while customers could browse hotel information, view room images, and make reservations. The app featured two distinct 
+                user interfaces, tailored to the type of user logged in. It utilized a database to store and manage all relevant information—from 
+                reservations to room details. Built using C#, this project sparked my deeper interest in backend development and helped solidify my 
+                understanding of fullstack application design. </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/hardware_eshop.png" class="d-block mx-auto" alt="Hotel Management Login page">
             <div class="carousel-caption d-none d-md-block">
               <h3>Hardware Shop (e-Shop)</h3>
-              <p>Also built for a course's final examination for my University, this was one of the most fun projects I have built at that time.
-                Build using HTML, CSS, PHP and a database, this app is a fully functional eshop where users could search through a variety of products
-                related to computer hardware, view item details and make orders. The app was designed to be user-friendly, easy to use and scalable.
-                Through the database, new item listings could be added, edited or deleted. Overall, this project helped me understand the importance of database management and user experience design.
+              <p>Developed as a final project for a university course, this was one of the most enjoyable projects I worked on at the time. Built using 
+                HTML, CSS, PHP, and a database, the application is a fully functional e-shop where users can browse a wide range of computer hardware products, 
+                view item details, and place orders. The platform was designed with user-friendliness and scalability in mind. Through the integrated database,
+                 administrators could easily add, edit, or remove product listings. This project greatly enhanced my understanding of database management and 
+                 highlighted the importance of delivering a smooth and intuitive user experience.
               </p>
             </div>
           </div>
@@ -228,10 +222,12 @@
             <img src="images/cpp_final.png" class="d-block mx-auto" alt="Labyrinth Game">
             <div class="carousel-caption d-none d-md-block">
               <h3>Labyrinth Game VS Computer</h3>
-              <p>Built using C++, this was also a final project for a course at my time in University. The game is a simple labyrinth game where the player has to find a gem that would randomly spawn
-                in the map and could change location at a random pace after an amout of moves made. The catch is that the user is playing against the computer, which is also trying to find the gem. The computer is using a simple algorithm to find the gem, and the user
-                has to be faster than the computer to win. The game was built using the console and the user could navigate through the labyrinth using the arrow keys. The map was a .txt file that would be given as an argument upon starting the app.
-                 A very fun project that helped me understand a ton of things about object oriented programming.</p>
+              <p>Built using C++, this project was another final assignment developed during my time at university. It’s a simple yet engaging labyrinth
+                 game where the player must locate a gem that spawns at random positions on the map and periodically changes location after a certain 
+                 number of moves. The twist is that the player competes against a computer opponent, which uses a basic pathfinding algorithm to locate 
+                 the gem. The goal is to reach the gem before the computer does. The game runs in the console, and the player navigates the labyrinth using
+                  the arrow keys. The map is loaded from a .txt file provided as a command-line argument at launch. This was a fun and rewarding project 
+                  that significantly deepened my understanding of object-oriented programming and game logic.</p>
               </p>
             </div>
           </div>
