--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             </p>
             <a
               class="btn btn-accent"
-              href="src/CV_Nektarios GkouvousisEN.pdf"
+              href="src/CV_Gkouvousis_en.pdf"
               download
             >
               Download my resume
