--- a/index.html
+++ b/index.html
@@ -8,23 +8,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="author" content="Nektarios Gkouvousis" />
-    <title>Nektarios Gkouvousis</title>
+    <title>Nektarios | Full Stack Engineer</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-      defer
-    ></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="style.css" />
@@ -149,7 +137,7 @@
       </section>
 
       <section id="about" class="section container-xl section-rise">
-        <div class="section-head rise-block" data-animate>
+        <div class="section-head rise-block">
           <p class="eyebrow pill pill-soft">Profile</p>
           <div>
             <h2>About Me</h2>
@@ -160,7 +148,7 @@
           </div>
         </div>
         <div class="card-grid two-col">
-          <article class="panel" data-animate>
+          <article class="panel">
             <p>
               I'm based in Athens, Greece, and I'm 24 years old. Currently, I'm
               pursuing a degree in Informatics and Computer Engineering at the
@@ -182,7 +170,7 @@
               family.
             </p>
           </article>
-          <article class="panel" data-animate>
+          <article class="panel">
             <p>
               Throughout my journey of learning and building projects, I've
               explored a wide range of technologies and software stacks. Below
@@ -227,13 +215,13 @@
       </section>
 
       <section id="projects" class="section container-xl section-rise">
-        <div class="section-head rise-block" data-animate>
+        <div class="section-head rise-block">
           <p class="eyebrow pill pill-soft">Work</p>
           <div>
             <h2>Projects</h2>
           </div>
         </div>
-        <article class="panel" data-animate>
+        <article class="panel">
           <p class="section-lede">
             Over the course of my development journey, I've worked on a
             variety of projects that have helped me gain valuable experience
@@ -242,8 +230,8 @@
             growth. Some of the highlights include:
           </p>
         </article>
-        <div class="panel carousel-panel rise-block" data-animate>
-          <div id="projectCarousel" class="carousel slide">
+        <div class="panel carousel-panel rise-block">
+          <div id="projectCarousel" class="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
@@ -394,73 +382,66 @@
                 </div>
               </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#projectCarousel"
-              data-bs-slide="prev"
-            >
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#projectCarousel"
-              data-bs-slide="next"
-            >
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-            <div class="carousel-indicators">
+            <div class="carousel-nav-row">
               <button
+                class="carousel-control-prev"
                 type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Project 1"
-              ></button>
+                data-dir="prev"
+              >
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  class="active"
+                  data-index="0"
+                  aria-label="Project 1"
+                ></button>
+                <button
+                  type="button"
+                  data-index="1"
+                  aria-label="Project 2"
+                ></button>
+                <button
+                  type="button"
+                  data-index="2"
+                  aria-label="Project 3"
+                ></button>
+                <button
+                  type="button"
+                  data-index="3"
+                  aria-label="Project 4"
+                ></button>
+                <button
+                  type="button"
+                  data-index="4"
+                  aria-label="Project 5"
+                ></button>
+                <button
+                  type="button"
+                  data-index="5"
+                  aria-label="Project 6"
+                ></button>
+              </div>
               <button
+                class="carousel-control-next"
                 type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="1"
-                aria-label="Project 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="2"
-                aria-label="Project 3"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="3"
-                aria-label="Project 4"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="4"
-                aria-label="Project 5"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#projectCarousel"
-                data-bs-slide-to="5"
-                aria-label="Project 6"
-              ></button>
+                data-dir="next"
+              >
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
         </div>
-        <div class="panel note-panel rise-block" data-animate>
+        <div class="panel note-panel rise-block">
           <p>You can find more details about these and other personal projects at my Github page.</p>
         </div>
       </section>
 
       <section id="contact" class="section container-xl section-rise">
-        <div class="section-head rise-block" data-animate>
+        <div class="section-head rise-block">
           <p class="eyebrow pill pill-soft">Connect</p>
           <div>
             <h2>Contact</h2>
@@ -468,7 +449,7 @@
           </div>
         </div>
         <div class="card-grid two-col">
-          <article class="panel contact-email rise-block" data-animate>
+          <article class="panel contact-email rise-block">
             <p class="section-lede">
               If you want to reach out to me, feel free to send me an e-mail or
               contact me via social media. I'm always open about new
@@ -486,7 +467,7 @@
               Download my resume
             </a>
           </article>
-          <article class="panel social-panel rise-block" data-animate>
+          <article class="panel social-panel rise-block">
             <p>Connect on my social channels.</p>
             <div class="social-links">
               <a href="https://github.com/Gouvo7" target="_blank">
